--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,41 @@
 .order-btn:active {
   transform: scale(0.9);
 }
+/* Клавища Explore all */
+.exploreAll {
+  display: block;
+  float: right;
+  position: relative;
+  padding: 0;
+  margin: 12px 20px 0 0;
+  font-family: Montserrat_700, Arial, sans-serif;
+  font-size: 18px;
+  line-height: 24px;
+  text-transform: uppercase;
+  letter-spacing: 0.2em;
+  color: #212121;
+  text-decoration: none;
+  transition: 0.2s ease-in-out;
+}
+.exploreAll:after {
+  content: "";
+  display: block;
+  width: 10px;
+  height: 10px;
+  border-top: 2px solid #212121;
+  border-right: 2px solid #212121;
+  position: absolute;
+  top: 7px;
+  right: -15px;
+  transition: 0.2s ease-in-out;
+  transform: rotate(45deg);
+}
+.exploreAll:hover {
+  transform: scale(1.1);
+}
+.exploreAll:active {
+  transform: scale(1);
+}
 /*Header*/
 .main-header {
   width: 1366px;
@@ -271,40 +306,6 @@
 .categorySwitcher-links:active {
   transform: scale(0.9);
 }
-.exploreAll {
-  display: block;
-  float: right;
-  position: relative;
-  padding: 0;
-  margin: 12px 20px 0 0;
-  font-family: Montserrat_700, Arial, sans-serif;
-  font-size: 18px;
-  line-height: 24px;
-  text-transform: uppercase;
-  letter-spacing: 0.2em;
-  color: #212121;
-  text-decoration: none;
-  transition: 0.2s ease-in-out;
-}
-.exploreAll:after {
-  content: "";
-  display: block;
-  width: 10px;
-  height: 10px;
-  border-top: 2px solid #212121;
-  border-right: 2px solid #212121;
-  position: absolute;
-  top: 7px;
-  right: -15px;
-  transition: 0.2s ease-in-out;
-  transform: rotate(45deg);
-}
-.exploreAll:hover {
-  transform: scale(1.1);
-}
-.exploreAll:active {
-  transform: scale(1);
-}
 .featured-products {
   clear: both;
   padding: 0;
@@ -427,4 +428,38 @@
   line-height: 24px;
   font-weight: 300;
   color: #6c6c6c;
+}
+/* Блок Trending Products */
+.trending {
+  margin: 0;
+  padding: 120px 100px;
+  box-sizing: border-box;
+  background-color: #ffffff;
+}
+.trending-h {
+  float: left;
+  margin: 0;
+  padding: 0;
+  text-transform: capitalize;
+  font-family: Montserrat_700, Arial, sans-serif;
+  font-size: 36px;
+  color: #212121;
+}
+.trending-container {
+  clear: both;
+  margin: 100px 0 0 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-gap: 30px;
+}
+.trending-itm {
+  display: block;
+  transition: 0.2s ease-in-out;
+}
+.trending-itm:hover {
+  transform: scale(1.1);
+}
+.trending-itm:active {
+  transform: scale(1);
 }
