--- a/css/style.less
+++ b/css/style.less
@@ -1,6 +1,8 @@
 @import "less/fonts.less";
 @import "less/variables.less";
 @import "less/order-btn.less";
+@import "less/exploreAll.less";
 @import "less/header.less";
 @import "less/main-featured.less";
 @import "less/main-exclusive.less";
+@import "less/main-trending.less";
