--- a/css/style.less
+++ b/css/style.less
@@ -1,8 +1,10 @@
 @import "less/fonts.less";
 @import "less/variables.less";
 @import "less/order-btn.less";
+@import "less/pagination.less";
 @import "less/exploreAll.less";
 @import "less/header.less";
 @import "less/main-featured.less";
 @import "less/main-exclusive.less";
 @import "less/main-trending.less";
+@import "less/main-hotdeal.less";
