--- a/css/style.less
+++ b/css/style.less
@@ -8,3 +8,5 @@
 @import "less/main-exclusive.less";
 @import "less/main-trending.less";
 @import "less/main-hotdeal.less";
+@import "less/main-exclusive2.less";
+@import "less/main-mobile.less";
