--- a/css/style.css
+++ b/css/style.css
@@ -510,3 +510,124 @@
   margin: 0 0 30px 0;
   padding: 0;
 }
+/* Второй блок Exclusive c gridом */
+.exclusive2 {
+  margin: 0;
+  padding: 120px 100px;
+  box-sizing: border-box;
+  background-color: #ffffff;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 2fr 1fr 1fr;
+  grid-gap: 30px;
+}
+.exclusive-bigItm {
+  width: 570px;
+  margin: 0;
+  padding: 0 0 0 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  background-color: #e9e9e9;
+  background-image: url("../img/exclusive2_bigBG.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  grid-row-start: 1;
+  grid-row-end: 3;
+}
+.exclusive-bigItm-ticket {
+  font-family: Montserrat_700, Arial, sans-serif;
+  font-size: 18px;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  color: #1e88e5;
+  padding: 0;
+  margin: 0 0 18px 0;
+}
+.exclusive-bigItm-h {
+  font-family: Montserrat_700, Arial, sans-serif;
+  font-size: 36px;
+  color: #212121;
+  padding: 0;
+  margin: 0 0 18px 0;
+  text-transform: capitalize;
+}
+.exclusive-p {
+  font-family: Montserrat_300, Arial, sans-serif;
+  font-size: 14.1px;
+  line-height: 24px;
+  color: #6c6c6c;
+  width: 330px;
+  padding: 0;
+  margin: 0 0 34px 0;
+}
+.exclusive-smallItm {
+  display: block;
+  transition: 0.2s ease-in-out;
+}
+.exclusive-smallItm:hover {
+  transform: scale(1.1);
+}
+.exclusive-smallItm:active {
+  transform: scale(1);
+}
+/* Section Mobile App */
+.mobile {
+  margin: 0;
+  padding: 125px 0 120px 100px;
+  box-sizing: border-box;
+  background-color: #f9f4f1;
+  background-image: url("../img/mobile_bg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.mobile-ticket {
+  display: block;
+  font-family: Montserrat_700, Arial, sans-serif;
+  font-size: 18px;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  color: #6c6c6c;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+}
+.mobile-h {
+  display: block;
+  font-family: Montserrat_100, Arial, sans-serif;
+  font-size: 62px;
+  line-height: 72px;
+  font-weight: 100;
+  text-transform: uppercase;
+  color: #212121;
+  padding: 0;
+  margin: 0;
+}
+.mobile-p {
+  display: block;
+  font-family: Montserrat_300, Arial, sans-serif;
+  font-size: 22px;
+  color: #6c6c6c;
+  padding: 0;
+  margin: 0 0 33px 0;
+}
+.mobile-a {
+  display: block;
+  width: 135px;
+  height: 40px;
+  margin: 0;
+}
+.mobile-a:nth-child(6) {
+  float: left;
+  margin: 0 10px 0 0;
+  background-image: url("../img/app_store.jpg");
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+.mobile-a:nth-child(7) {
+  float: left;
+  background-image: url("../img/google_play.jpg");
+  background-repeat: no-repeat;
+  background-size: contain;
+}
