--- a/css/style.less
+++ b/css/style.less
@@ -10,3 +10,4 @@
 @import "less/main-hotdeal.less";
 @import "less/main-exclusive2.less";
 @import "less/main-mobile.less";
+@import "less/footer.less";
