--- a/css/style.less
+++ b/css/style.less
@@ -11,3 +11,4 @@
 @import "less/main-exclusive2.less";
 @import "less/main-mobile.less";
 @import "less/footer.less";
+@import "less/contacts-header.less";
