--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,23 @@
   width: 1366px;
   margin: 0 auto;
 }
+/* Анимации */
+@keyframes refresh {
+  from {
+    -ms-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  to {
+    -ms-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
 /* Универсальная кнопка Order US */
 .order-btn {
   display: block;
@@ -303,9 +320,6 @@
 .categorySwitcher-links:hover {
   color: #212121;
   border-bottom: 2px solid #212121;
-}
-.categorySwitcher-links:active {
-  transform: scale(0.9);
 }
 .featured-products {
   clear: both;
@@ -917,4 +931,26 @@
   line-height: 20px;
   font-weight: 300;
   color: #6c6c6c;
+}
+/* Дополнительные стили для страницы Products */
+.productsCategorySwitcher-link {
+  font-size: 18px;
+}
+#refresh-btn-activator {
+  display: none;
+}
+.refresh-btn {
+  display: block;
+  margin: 0 auto;
+  margin-top: 71px;
+  width: 43px;
+  height: 31px;
+  background-color: transparent;
+  border: none;
+  background-image: url("../img/refresh.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+#refresh-btn-activator:checked ~ .refresh-btn {
+  animation: refresh 2s linear;
 }
