Последняя страница готова

--- a/css/style.less
+++ b/css/style.less
@@ -13,3 +13,4 @@
 @import "less/footer.less";
 @import "less/contacts-extrastyles.less";
 @import "less/products-extrastyles.less";
+@import "less/product-extrastyle.less";
